# experiment_octoprobe_kibana

./: .coverage  .gitignore  README.md  README_pytest-elasticsearch.md  octoprobe_kibana.code-workspace  pyproject.toml
2026-02-24a_elk/elastic-start-local/: uninstall.sh
2026-02-24a_elk/elastic-start-local/2026-03-04_sample_data/: README.md
2026-02-27_sample_data/A/: README.md  create_template.json  create_template.sh  run_transform.py  run_upload.sh  run_upload_transformed.sh
2026-02-27_sample_data/demo/: group_a.json  group_b.json  index_template.json  run.json
2026-02-27_sample_data/reports/: README.md
2026-02-27_sample_data/reports/ch_hans_1_20260226-205450/RUN-FLASH_FORMAT,a@1133-TEENSY40/: context_testgroup.json
2026-02-27_sample_data/reports/ch_hans_1_20260226-205450/RUN-FLASH_FORMAT,a@1830-LOLIN_C3_MINI/: context_testgroup.json
2026-02-27_sample_data/reports/ch_hans_1_20260226-205450/RUN-FLASH_FORMAT,a@3a21-PYBV11/: context_testgroup.json
2026-02-27_sample_data/reports/ch_hans_1_20260226-205450/RUN-FLASH_FORMAT,a@3a21-PYBV11-DP_THREAD/: context_testgroup.json
2026-02-27_sample_data/reports/ch_hans_1_20260226-205450/RUN-FLASH_FORMAT,a@3c2a-ARDUINO_NANO_33/: context_testgroup.json
2026-03-04_sample_data/A/: README.md  README_esql_IN.md  config_op_testgroups.json  config_op_testoutcomes.json  config_op_testruns.json  run_query.py  run_transform.py
_tests/: test_elastic.py  test_executor.py
tests/: conftest.py  test_elastic.py  test_kibana_a.py
(+285 files in other folders)
