[project]
name = "pytest-elasticsearch"
version = "5.0.0"
dependencies = [
	"elasticsearch>=8",
]


[tool.pytest]
xfail_strict=true
elasticsearch_host="127.0.0.1"
# elasticsearch_port="9200"
elasticsearch_api_key="xxxx"


# addopts = ["--showlocals", "--verbose"]
# addopts = [
#     "--elasticsearch_host", "localhost",
#     "--elasticsearch_port=9200",
# ]
testpaths = ["tests"]
